--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,7 +156,7 @@ nav ul li a:hover {
 
 /* User messages on the right */
 .user-message {
-  background: #5a9bd4;
+  background: #4a8bc4;
   text-align: right;
 }
 
